--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "autoprefixer": "^7.1.5",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
+    "css-to-string-loader": "^0.1.3",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
@@ -35,6 +36,7 @@
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "postcss-loader": "^2.0.7",
     "raw-loader": "^0.5.1",
+    "resolve-url-loader": "^2.2.1",
     "sass-loader": "^6.0.6",
     "ts-loader": "^2.3.7",
     "tslint-loader": "^3.5.3",
